# cookiecutter-biology-experiment

./: LICENSE  README.md  cookiecutter.json
{{ cookiecutter.repo_name }}/: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
