[metadata]
name = {{cookiecutter.project_name}}
version = 0.0.1
author = {{cookiecutter.author_name}}
author_email = author@example.com
description = {{cookiecutter.description}}
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.repo_name}}
project_urls =
    Bug Tracker = https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.repo_name}}/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: {% if cookiecutter.open_source_license == 'MIT' %}MIT License{% elif cookiecutter.open_source_license == 'BSD-3-Clause' %}BSD License{% endif %}
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src